dhall/tests/type-inference/failure/unit/SomeNotType.txt
Type error: error: InvalidOptionalType
 --> <current file>:1:1
  |
1 | Some Bool
  | ^^^^^^^^^ InvalidOptionalType
  |
